[gd_scene load_steps=4 format=3 uid="uid://c0086j8v7nqf1"]

[ext_resource type="Texture2D" uid="uid://dyw05ktncw56u" path="res://Assets/Items/health.png" id="1_4ao4x"]
[ext_resource type="Script" path="res://Scripts/health_bar.gd" id="1_cp7h0"]
[ext_resource type="Texture2D" uid="uid://psgn080epar1" path="res://Assets/health-empty.png" id="3_knieg"]

[node name="HealthBar" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_cp7h0")

[node name="Empty1" type="Sprite2D" parent="."]
texture = ExtResource("3_knieg")

[node name="Empty2" type="Sprite2D" parent="."]
position = Vector2(16, 0)
texture = ExtResource("3_knieg")

[node name="Empty3" type="Sprite2D" parent="."]
position = Vector2(32, 0)
texture = ExtResource("3_knieg")

[node name="Empty4" type="Sprite2D" parent="."]
position = Vector2(48, 0)
texture = ExtResource("3_knieg")

[node name="Empty5" type="Sprite2D" parent="."]
position = Vector2(64, 0)
texture = ExtResource("3_knieg")

[node name="Health1" type="Sprite2D" parent="."]
texture = ExtResource("1_4ao4x")

[node name="Health2" type="Sprite2D" parent="."]
position = Vector2(16, 0)
texture = ExtResource("1_4ao4x")

[node name="Health3" type="Sprite2D" parent="."]
position = Vector2(32, 0)
texture = ExtResource("1_4ao4x")

[node name="Health4" type="Sprite2D" parent="."]
position = Vector2(48, 0)
texture = ExtResource("1_4ao4x")

[node name="Health5" type="Sprite2D" parent="."]
position = Vector2(64, 0)
texture = ExtResource("1_4ao4x")
